Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-61727

MapRectangle does not update its topLeft or (x,y) values correctly when dragged outside of the viewport

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.9.2
    • 5.9.0
    • None

    Description

      Two different scenarios:
      1. When the topLeft and bottomRight coordinates of a MapRectangle are specified correctly, ie, the topLeft.latitude > bottomRight.latitude and topLeft.longitude < bottomRight.longitude, the MapRectangle x, y, width and height values are incorrectly updated when the MapRectangle is dragged outside the viewport. This causes the MapRectangle to flicker at the disappear or flicker at the edges of the viewport.

      2. When the topLeft and bottomRight coordinates of MapRectangle are specified such that topLeft.latitude < bottomRight.latitude, the MapRectangle topLeft coordinate does not get updated when dragged but the x, y, width and height values remain correct. So, when the underlying map is dragged or scaled, the MapRectangle jumps back to its original position before the dragging.

      Please see the attached main.qml. The blue rectangle illustrates Scenario 1, drag to left or top edge of viewport to see the effect. Also see the console output about x, y, width and height values. The red rectangle illustrates Scenario 2. Drag the red rectangle, then drag or zoom the underlying map. Also, see the console output about topLeft coordinate.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            paangele Paolo Angelelli
            jadew jadew
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes